# PeregrineAntiCheat

./: README.md  build_dll.bat  install.bat  signatures.conf  todo.xml  uninstall.bat
src/PeregrineDLL/PeregrineDLL/: PeregrineDLL.vcxproj  PeregrineDLL.vcxproj.filters  callstack.c  callstack.h  dllmain.cpp  ipc.c  ipc.h
src/PeregrineKernelComponent/PeregrineKernelComponent/: ApcInjection.c  ApcInjection.h  AppState.h  Coms.c  Coms.h  DriverScan.c  DriverScan.h  MiniFilter.c  MiniFilter.h  NotifyRoutine.c  NotifyRoutine.h  ObCallbackScan.c  ObCallbackScan.h  PeregrineKernelComponent.inf  PeregrineKernelComponent.vcxproj  PeregrineKernelComponent.vcxproj.filters  PicCallback.c  PicCallback.h  Protection.c  Protection.h  SystemCheck.h  main.c  obCallback.h
src/Userland/: DLL.py  PatchDetection.py  PeregrineKernelComponent.sys  peregrine_gui.py  threadWork.py
src/peregrine-tauri/src-tauri/: Cargo.toml
src/peregrine-tauri/src-tauri/src/: driver_comm.rs  etw_ti.rs  ipc.rs  lib.rs  main.rs
src/peregrine-tauri/src-tauri/src/detections/: mod.rs  overlay.rs  pe.rs  sigscan.rs  threads.rs
src/peregrine-tauri/src/routes/: +page.svelte
test/: build.bat  cheat.c  cheat_callstack.c  cheat_shellcode.c  game.c
